--- a/preprocess-data/merge_all_years.ipynb
+++ b/preprocess-data/merge_all_years.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "full_df = pd.DataFrame()\n",
     "\n",
-    "for i in range (2006, 2018):\n",
+    "for i in range (2006, 2019):\n",
     "    df = pd.read_excel(str(i) + '.xls', sheet_name='Tab E1', header=2, na_values=['x', '.'])\n",
     "    df['jahr'] = i\n",
     "    full_df = full_df.append(df[df.iloc[:,1] == 'Berlin'], sort=False)\n",
@@ -47,6 +47,16 @@
     "full_df[['18-64 Jahre insgesamt',\n",
     "       'ab 65 Jahre insgesamt', '18-64 Jahre Deutsche', 'ab 65 Jahre Deutsche',\n",
     "       '18-64 Jahre Ausländer', 'ab 65 Jahre Ausländer']].to_csv('timeline.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_df = full_df.round(2)\n",
+    "full_df.to_csv('timeline.csv', encoding='utf-8')"
    ]
   },
   {
