change python script for preprocessing

--- a/preprocess-data/analysis.ipynb
+++ b/preprocess-data/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,113 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge all years for whole Berlin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_df = pd.DataFrame()\n",
-    "\n",
-    "for i in range (2006, 2019):\n",
-    "    df = pd.read_excel(str(i) + '.xls', sheet_name='Tab E1', header=2, na_values=['x', '.'])\n",
-    "    df['jahr'] = i\n",
-    "    full_df = full_df.append(df[df.iloc[:,1] == 'Berlin'], sort=False)\n",
-    "\n",
-    "full_df.set_index('jahr', inplace = True)\n",
-    "full_df = full_df.round(2)\n",
-    "\n",
-    "full_df.rename(columns={\n",
-    "       ' je 100 der Bevölkerung1)\\n(18 - 64 Jahre,\\ninsgesamt)': '18-64 Jahre insgesamt',\n",
-    "       ' je 100 der Bevölkerung1)\\n(ab 65 Jahre,\\ninsgesamt)': 'ab 65 Jahre insgesamt',\n",
-    "       ' je 100 der Bevölkerung1)\\n(18 - 64 Jahre,\\nDeutsche)': '18-64 Jahre Deutsche',\n",
-    "       ' je 100 der Bevölkerung1)\\n(ab 65 Jahre,\\nDeutsche)': 'ab 65 Jahre Deutsche',\n",
-    "       ' je 100 der Bevölkerung1)\\n(18 - 64 Jahre,\\nAusländer)': '18-64 Jahre Ausländer',\n",
-    "       ' je 100 der Bevölkerung1)\\n(ab 65 Jahre,\\nAusländer)': 'ab 65 Jahre Ausländer'\n",
-    "}, inplace=True)\n",
-    "\n",
-    "full_df[['18-64 Jahre insgesamt',\n",
-    "       'ab 65 Jahre insgesamt', '18-64 Jahre Deutsche', 'ab 65 Jahre Deutsche',\n",
-    "       '18-64 Jahre Ausländer', 'ab 65 Jahre Ausländer']].to_csv('timeline.csv', encoding='utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_df = full_df.round(2)\n",
-    "full_df.to_csv('timeline.csv', encoding='utf-8')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Merge all years on LOR Level"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ab 65 Jahre\n",
-    "df = pd.DataFrame()\n",
-    "\n",
-    "for i in range (2006, 2019):\n",
-    "    df_temp = pd.read_excel(str(i) + '.xls', sheet_name='Tab E1', header=2, na_values=['x', '.'])\n",
-    "    df_temp.rename(columns={' je 100 der Bevölkerung1)\\n(ab 65 Jahre,\\ninsgesamt)': 'y' + str(i), \n",
-    "                            'Planungsraum':'Kennung', 'Unnamed: 1':'Name'}, inplace=True)\n",
-    "\n",
-    "    df_temp = df_temp[df_temp.Name.notnull() & (df_temp.Name != 'Name')]\n",
-    "    df_temp = df_temp[['Kennung', 'Name', 'y' + str(i)]]\n",
-    "    \n",
-    "    if df.size == 0:\n",
-    "        df = df_temp\n",
-    "    else:\n",
-    "        df = df.merge(df_temp, how=\"right\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.round(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.fillna('null')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('timelapse.csv', encoding='utf-8')"
+    "# EXPLORATIVE ANALYSIS"
    ]
   },
   {
