updated timelapse data

--- a/preprocess-data/preprocess-data.ipynb
+++ b/preprocess-data/preprocess-data.ipynb
@@ -16,18 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "from shapely.geometry import Point"
+    "from shapely.geometry import Point\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
     "\n",
     "df = df.fillna('null')\n",
     "\n",
-    "df.to_csv('data/preprocessed-data/timeline.csv', encoding='utf-8')"
+    "df.to_csv('data/preprocessed-data/timeline_full.csv', encoding='utf-8')"
    ]
   },
   {
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
