added NaN (manually)

--- a/preprocess-data/preprocess-data.ipynb
+++ b/preprocess-data/preprocess-data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,32 +101,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Kennung                        Name     y2006\n",
+      "441  12302007             Schorfheidestr.  0.166113\n",
+      "442  12302008          Märkisches Zentrum  3.859993\n",
+      "443  12302009       Treuenbrietzener Str.  4.018789\n",
+      "444  12302010            Dannenwalder Weg  3.345070\n",
+      "445  12302011             Lübarser Straße  2.367531\n",
+      "446  12302012           Rollbergesiedlung  5.258126\n",
+      "447  12304313                 Borsigwalde  2.608048\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  1.750292\n",
+      "      Kennung                        Name     y2007\n",
+      "441  12302007             Schorfheidestr.  0.311526\n",
+      "442  12302008          Märkisches Zentrum  4.072682\n",
+      "443  12302009       Treuenbrietzener Str.  4.933196\n",
+      "444  12302010            Dannenwalder Weg  4.328018\n",
+      "445  12302011             Lübarser Straße  2.533040\n",
+      "446  12302012           Rollbergesiedlung  6.278027\n",
+      "447  12304313                 Borsigwalde  3.021583\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  2.216278\n",
+      "      Kennung                        Name     y2008\n",
+      "441  12302007             Schorfheidestr.  0.147929\n",
+      "442  12302008          Märkisches Zentrum  3.486239\n",
+      "443  12302009       Treuenbrietzener Str.  4.799578\n",
+      "444  12302010            Dannenwalder Weg  3.755605\n",
+      "445  12302011             Lübarser Straße  2.553191\n",
+      "446  12302012           Rollbergesiedlung  4.862953\n",
+      "447  12304313                 Borsigwalde  3.086863\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  2.609335\n",
+      "      Kennung                        Name     y2009\n",
+      "441  12302107             Schorfheidestr.  1.208054\n",
+      "442  12302108          Märkisches Zentrum  4.011799\n",
+      "443  12302109       Treuenbrietzener Str.  6.388738\n",
+      "444  12302110            Dannenwalder Weg  4.226919\n",
+      "445  12302211             Lübarser Straße  2.451481\n",
+      "446  12302212           Rollbergesiedlung  6.017699\n",
+      "447  12304313                 Borsigwalde  3.438596\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  2.441652\n",
+      "      Kennung                        Name     y2010\n",
+      "441  12302107             Schorfheidestr.  1.830986\n",
+      "442  12302108          Märkisches Zentrum  3.953824\n",
+      "443  12302109       Treuenbrietzener Str.  6.382979\n",
+      "444  12302110            Dannenwalder Weg  4.835924\n",
+      "445  12302211             Lübarser Straße  2.403846\n",
+      "446  12302212           Rollbergesiedlung  7.003546\n",
+      "447  12304313                 Borsigwalde  3.531073\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  2.969589\n",
+      "      Kennung                        Name     y2011\n",
+      "441  12302107             Schorfheidestr.  0.834492\n",
+      "442  12302108          Märkisches Zentrum  4.395280\n",
+      "443  12302109       Treuenbrietzener Str.  6.339468\n",
+      "444  12302110            Dannenwalder Weg  4.638873\n",
+      "445  12302211             Lübarser Straße  2.268041\n",
+      "446  12302212           Rollbergesiedlung  7.699358\n",
+      "447  12304313                 Borsigwalde  3.690808\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  3.157504\n",
+      "      Kennung                        Name     y2012\n",
+      "441  12302107             Schorfheidestr.  1.715040\n",
+      "442  12302108          Märkisches Zentrum  4.601048\n",
+      "443  12302109       Treuenbrietzener Str.  7.280617\n",
+      "444  12302110            Dannenwalder Weg  5.086774\n",
+      "445  12302211             Lübarser Straße  2.300000\n",
+      "446  12302212           Rollbergesiedlung  8.122744\n",
+      "447  12304313                 Borsigwalde  4.022583\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  3.309091\n",
+      "      Kennung                        Name     y2013\n",
+      "441  12302107             Schorfheidestr.  1.756587\n",
+      "442  12302108          Märkisches Zentrum  4.587421\n",
+      "443  12302109       Treuenbrietzener Str.  7.804419\n",
+      "444  12302110            Dannenwalder Weg  5.408654\n",
+      "445  12302211             Lübarser Straße  2.346041\n",
+      "446  12302212           Rollbergesiedlung  7.866184\n",
+      "447  12304313                 Borsigwalde  3.816254\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  3.466956\n",
+      "      Kennung                        Name     y2014\n",
+      "441  12302107             Schorfheidestr.  1.610905\n",
+      "442  12302108          Märkisches Zentrum  4.350331\n",
+      "443  12302109       Treuenbrietzener Str.  7.433628\n",
+      "444  12302110            Dannenwalder Weg  4.900817\n",
+      "445  12302211             Lübarser Straße  2.190476\n",
+      "446  12302212           Rollbergesiedlung  7.468124\n",
+      "447  12304313                 Borsigwalde  3.438596\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  3.250883\n",
+      "      Kennung                        Name     y2015\n",
+      "441  12302107             Schorfheidestr.  2.000000\n",
+      "442  12302108          Märkisches Zentrum  4.974417\n",
+      "443  12302109       Treuenbrietzener Str.  8.148804\n",
+      "444  12302110            Dannenwalder Weg  5.609065\n",
+      "445  12302211             Lübarser Straße  2.257761\n",
+      "446  12302212           Rollbergesiedlung  8.325709\n",
+      "447  12304313                 Borsigwalde  4.501385\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  3.384396\n",
+      "      Kennung                        Name     y2016\n",
+      "441  12302107             Schorfheidestr.  1.861042\n",
+      "442  12302108          Märkisches Zentrum  4.917112\n",
+      "443  12302109       Treuenbrietzener Str.  8.450704\n",
+      "444  12302110            Dannenwalder Weg  5.997758\n",
+      "445  12302211             Lübarser Straße  2.549575\n",
+      "446  12302212           Rollbergesiedlung  9.659614\n",
+      "447  12304313                 Borsigwalde  4.798331\n",
+      "448  12304314  Ziekowstraße/Freie Scholle  3.629893\n",
+      "      Kennung                        Name      y2017\n",
+      "441  12302107             Schorfheidestr.   1.944107\n",
+      "442  12302108          Märkisches Zentrum   5.143975\n",
+      "443  12302109       Treuenbrietzener Str.   9.043020\n",
+      "444  12302110            Dannenwalder Weg   6.704225\n",
+      "445  12302211             Lübarser Straße   2.502317\n",
+      "446  12302212           Rollbergesiedlung  10.151803\n",
+      "447  12304313                 Borsigwalde   4.605722\n",
+      "448  12304314  Ziekowstraße/Freie Scholle   3.607143\n",
+      "      Kennung                        Name      y2018\n",
+      "441  12302107             Schorfheidestr.   2.682927\n",
+      "442  12302108          Märkisches Zentrum   5.708661\n",
+      "443  12302109       Treuenbrietzener Str.   8.873114\n",
+      "444  12302110            Dannenwalder Weg   6.966292\n",
+      "445  12302211             Lübarser Straße   2.329916\n",
+      "446  12302212           Rollbergesiedlung  10.995261\n",
+      "447  12304313                 Borsigwalde   4.915730\n",
+      "448  12304314  Ziekowstraße/Freie Scholle   4.116395\n"
+     ]
+    }
+   ],
    "source": [
     "# ab 65 Jahre\n",
     "\n",
+    "#initialise empty data frame\n",
     "df = pd.DataFrame()\n",
     "\n",
+    "#iterate thorugh all the xls files\n",
+    "#header row ist third row // start coutning at 0\n",
+    "#specify speacial Na values with \"x\" and \".\"\n",
     "for i in range (2006, 2019):\n",
     "    df_temp = pd.read_excel('data/raw-data/lor/{}.xls'.format(str(i)), sheet_name='Tab E1', header=2, na_values=['x', '.'])\n",
     "    df_temp.rename(columns={' je 100 der Bevölkerung1)\\n(ab 65 Jahre,\\ninsgesamt)': 'y' + str(i), \n",
     "                            'Planungsraum':'Kennung', 'Unnamed: 1':'Name'}, inplace=True)\n",
     "\n",
+    "    #solange es Planungsräume gibt\n",
     "    df_temp = df_temp[df_temp.Name.notnull() & (df_temp.Name != 'Name')]\n",
+    "    \n",
+    "    #create smaller df\n",
     "    df_temp = df_temp[['Kennung', 'Name', 'y' + str(i)]]\n",
+    "    \n",
+    "    print(df_temp.iloc[439:447,])\n",
     "    \n",
     "    if df.size == 0:\n",
     "        df = df_temp\n",
     "    else:\n",
     "        df = df.merge(df_temp, how=\"right\")\n",
     "\n",
+    "#round to two numbers after comma\n",
     "df = df.round(2)\n",
     "\n",
     "df = df.fillna('null')\n",
     "\n",
-    "df.to_csv('data/preprocessed-data/timeline_full.csv', encoding='utf-8')"
+    "df.to_csv('data/preprocessed-data/timelapse_full.csv', encoding='utf-8')"
    ]
   },
   {
@@ -145,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +330,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,12 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_joined.to_csv('data/preprocessed-data/rent_income.csv', encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
